--- a/build_model.ipynb
+++ b/build_model.ipynb
@@ -84,8 +84,8 @@
         "id": "fW0UJ21l42yu"
       },
       "source": [
-        "X_train = pd.read_csv(\"x_train.csv\")\n",
-        "y_train = pd.read_csv(\"y_train.csv\")"
+        "X_train = pd.read_csv(\"data/x_train.csv\")\n",
+        "y_train = pd.read_csv(\"data/y_train.csv\")"
       ],
       "execution_count": 11,
       "outputs": []
@@ -829,8 +829,8 @@
       },
       "source": [
         "# load the test data\n",
-        "X_test = pd.read_csv(\"x_test.csv\")\n",
-        "y_test = pd.read_csv(\"y_test.csv\")\n",
+        "X_test = pd.read_csv(\"data/x_test.csv\")\n",
+        "y_test = pd.read_csv(\"data/y_test.csv\")\n",
         "\n",
         "print(X_test.shape)\n",
         "print(y_test.shape)"
