--- a/build_model.ipynb
+++ b/build_model.ipynb
@@ -363,8 +363,8 @@
         "id": "N0rDwJXMEQ2b"
       },
       "source": [
-        "#### Hyperparameter Fine-Tuning\n",
-        "Fine- tuning of any ML model involves an iterative searching for finding a set of hyper-parameters which can optimize the model performance during training/validation process. This search can be a Randomized search  for a given number of iterations in the provided hyper-parameter search space for generating best model performance (on provided scoring criteria). \n",
+        "#### Hyperparameters Fine-tuning\n",
+        "Fine-tuning of any ML model involves an iterative searching for finding a set of hyper-parameters which can optimize the model performance during training/validation process. This search can be a Randomized search  for a given number of iterations in the provided hyper-parameter search space for generating best model performance (on provided scoring criteria). \n",
         "\n",
         "Alternatively, a more exhaustive search can be performed for all combinations of the provided grid of parameters aimed to optimize the model performance. \n",
         "\n",
